created a blog page

--- a/css/utility.css
+++ b/css/utility.css
@@ -30,7 +30,7 @@
   color: #fff;
 }
 .btn-dark, .bg-dark {
-  background: #0284d0;
+  background: black;
   color: #fff;
 }
 .btn-light, .bg-light {
