--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,10 @@ img {
 .hero *{
   z-index: 10;
 }
+.hero.blog {
+  background: url('../images/home/blog.jpg') no repeat center center/cover;
+  height: 30vh;
+}
 /* Icons */
 .icons {
   padding: 30px;
